Tyche/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Tyche/Par.y
-----------------------------------------------------------------------------

state 73 contains 1 shift/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Double -> L_doubl                                  (4)
	Program -> Stmt                                    (5)
	Arg -> ArgMod FullIdent ':' FullType               (6)
	ListArg ->                                         (7)
	ListArg -> Arg                                     (8)
	ListArg -> Arg ',' ListArg                         (9)
	FullIdent -> Ident                                 (10)
	FullIdent -> '_'                                   (11)
	Stmt5 -> ';'                                       (12)
	Stmt5 -> 'break' ';'                               (13)
	Stmt5 -> 'continue' ';'                            (14)
	Stmt5 -> 'return' Expr ';'                         (15)
	Stmt5 -> Expr ';'                                  (16)
	Stmt5 -> 'return' ';'                              (17)
	Stmt5 -> 'def' FullIdent ':' FullType '=' Expr1 ';'   (18)
	Stmt5 -> Ident '=' Expr1 ';'                       (19)
	Stmt5 -> Stmt6                                     (20)
	Stmt4 -> 'def' FullIdent ':' FullType '(' ListArg ')' Stmt5   (21)
	Stmt4 -> Stmt5                                     (22)
	Stmt1 -> 'if' Expr 'then' Stmt1                    (23)
	Stmt1 -> 'if' Expr 'then' Stmt1 'else' Stmt1       (24)
	Stmt1 -> 'while' Expr 'do' Stmt1                   (25)
	Stmt1 -> 'for' 'each' Ident 'from' Expr 'do' Stmt1   (26)
	Stmt1 -> 'for' Ident 'from' Expr 'to' Expr 'do' Stmt1   (27)
	Stmt1 -> Stmt2                                     (28)
	Stmt -> Stmt1 Stmt                                 (29)
	Stmt -> Stmt1                                      (30)
	Stmt2 -> Stmt3                                     (31)
	Stmt3 -> Stmt4                                     (32)
	Stmt6 -> '{' Stmt '}'                              (33)
	Type -> 'int'                                      (34)
	Type -> 'string'                                   (35)
	Type -> 'boolean'                                  (36)
	Type -> 'void'                                     (37)
	Type -> 'float'                                    (38)
	Type -> '(' FullType ')'                           (39)
	Type -> '[' FullType ']'                           (40)
	Type -> '(' ListArgType ')' '->' FullType          (41)
	ArgType -> ArgMod Type                             (42)
	FullType -> ListTypeMod Type                       (43)
	ListArgType ->                                     (44)
	ListArgType -> ArgType                             (45)
	ListArgType -> ArgType ',' ListArgType             (46)
	ArgMod -> 'var'                                    (47)
	ArgMod -> 'val'                                    (48)
	ArgMod -> 'inout'                                  (49)
	TypeMod -> 'readonly'                              (50)
	ListTypeMod ->                                     (51)
	ListTypeMod -> ListTypeMod TypeMod                 (52)
	Expr9 -> Ident                                     (53)
	Expr9 -> Integer                                   (54)
	Expr9 -> 'true'                                    (55)
	Expr9 -> 'false'                                   (56)
	Expr9 -> String                                    (57)
	Expr9 -> Double                                    (58)
	Expr9 -> '()'                                      (59)
	Expr9 -> '(' Expr ')'                              (60)
	Expr8 -> '-' Expr9                                 (61)
	Expr8 -> '!' Expr9                                 (62)
	Expr8 -> 'not' Expr9                               (63)
	Expr8 -> Expr9                                     (64)
	Expr7 -> Expr8 '::' Expr7                          (65)
	Expr7 -> Expr8                                     (66)
	Expr6 -> Expr6 MulOp Expr7                         (67)
	Expr6 -> Expr7                                     (68)
	Expr5 -> Expr5 AddOp Expr6                         (69)
	Expr5 -> Expr6                                     (70)
	Expr4 -> Expr4 RelOp Expr5                         (71)
	Expr4 -> Expr5                                     (72)
	Expr3 -> Expr4 AndOp Expr3                         (73)
	Expr3 -> Expr4                                     (74)
	Expr2 -> Expr3 OrOp Expr2                          (75)
	Expr2 -> Expr3                                     (76)
	Expr1 -> '(' ListExpr ')'                          (77)
	Expr1 -> '[' ListExpr ']'                          (78)
	Expr1 -> 'array' '[' Expr ']'                      (79)
	Expr1 -> Ident '(' ListExpr ')'                    (80)
	Expr1 -> Expr2                                     (81)
	Expr -> Expr1 '?' Expr1 ':' Expr1                  (82)
	Expr -> 'lambda' ':' FullType '(' ListArg ')' '->' Stmt1   (83)
	Expr -> 'random' 'from' Expr1                      (84)
	Expr -> 'random' 'from' Expr1 'distribution' Expr1   (85)
	Expr -> 'probability' 'of' Stmt1 'satisfying' Expr1   (86)
	Expr -> 'probability' 'tested' Expr1 'times' 'of' Stmt1 'satisfying' Expr1   (87)
	Expr -> Expr1                                      (88)
	ListExpr ->                                        (89)
	ListExpr -> Expr                                   (90)
	ListExpr -> Expr ',' ListExpr                      (91)
	AddOp -> '+'                                       (92)
	AddOp -> '-'                                       (93)
	MulOp -> '*'                                       (94)
	MulOp -> '/'                                       (95)
	MulOp -> '%'                                       (96)
	MulOp -> 'mod'                                     (97)
	RelOp -> '<'                                       (98)
	RelOp -> '<='                                      (99)
	RelOp -> '>'                                       (100)
	RelOp -> '>='                                      (101)
	RelOp -> '=='                                      (102)
	RelOp -> 'equals'                                  (103)
	RelOp -> '!='                                      (104)
	OrOp -> 'or'                                       (105)
	OrOp -> '||'                                       (106)
	AndOp -> 'and'                                     (107)
	AndOp -> '&&'                                      (108)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	'()'           { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	'::'           { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'?'            { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'_'            { PT _ (TS _ 26) }
	'and'          { PT _ (TS _ 27) }
	'array'        { PT _ (TS _ 28) }
	'boolean'      { PT _ (TS _ 29) }
	'break'        { PT _ (TS _ 30) }
	'continue'     { PT _ (TS _ 31) }
	'def'          { PT _ (TS _ 32) }
	'distribution' { PT _ (TS _ 33) }
	'do'           { PT _ (TS _ 34) }
	'each'         { PT _ (TS _ 35) }
	'else'         { PT _ (TS _ 36) }
	'equals'       { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'float'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'from'         { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'inout'        { PT _ (TS _ 43) }
	'int'          { PT _ (TS _ 44) }
	'lambda'       { PT _ (TS _ 45) }
	'mod'          { PT _ (TS _ 46) }
	'not'          { PT _ (TS _ 47) }
	'of'           { PT _ (TS _ 48) }
	'or'           { PT _ (TS _ 49) }
	'probability'  { PT _ (TS _ 50) }
	'random'       { PT _ (TS _ 51) }
	'readonly'     { PT _ (TS _ 52) }
	'return'       { PT _ (TS _ 53) }
	'satisfying'   { PT _ (TS _ 54) }
	'string'       { PT _ (TS _ 55) }
	'tested'       { PT _ (TS _ 56) }
	'then'         { PT _ (TS _ 57) }
	'times'        { PT _ (TS _ 58) }
	'to'           { PT _ (TS _ 59) }
	'true'         { PT _ (TS _ 60) }
	'val'          { PT _ (TS _ 61) }
	'var'          { PT _ (TS _ 62) }
	'void'         { PT _ (TS _ 63) }
	'while'        { PT _ (TS _ 64) }
	'{'            { PT _ (TS _ 65) }
	'||'           { PT _ (TS _ 66) }
	'}'            { PT _ (TS _ 67) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_doubl        { PT _ (TD $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Double          rule  4
	Program         rule  5
	Arg             rule  6
	ListArg         rules 7, 8, 9
	FullIdent       rules 10, 11
	Stmt5           rules 12, 13, 14, 15, 16, 17, 18, 19, 20
	Stmt4           rules 21, 22
	Stmt1           rules 23, 24, 25, 26, 27, 28
	Stmt            rules 29, 30
	Stmt2           rule  31
	Stmt3           rule  32
	Stmt6           rule  33
	Type            rules 34, 35, 36, 37, 38, 39, 40, 41
	ArgType         rule  42
	FullType        rule  43
	ListArgType     rules 44, 45, 46
	ArgMod          rules 47, 48, 49
	TypeMod         rule  50
	ListTypeMod     rules 51, 52
	Expr9           rules 53, 54, 55, 56, 57, 58, 59, 60
	Expr8           rules 61, 62, 63, 64
	Expr7           rules 65, 66
	Expr6           rules 67, 68
	Expr5           rules 69, 70
	Expr4           rules 71, 72
	Expr3           rules 73, 74
	Expr2           rules 75, 76
	Expr1           rules 77, 78, 79, 80, 81
	Expr            rules 82, 83, 84, 85, 86, 87, 88
	ListExpr        rules 89, 90, 91
	AddOp           rules 92, 93
	MulOp           rules 94, 95, 96, 97
	RelOp           rules 98, 99, 100, 101, 102, 103, 104
	OrOp            rules 105, 106
	AndOp           rules 107, 108

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'()'           shift, and enter state 27
	'-'            shift, and enter state 28
	';'            shift, and enter state 29
	'['            shift, and enter state 30
	'array'        shift, and enter state 31
	'break'        shift, and enter state 32
	'continue'     shift, and enter state 33
	'def'          shift, and enter state 34
	'false'        shift, and enter state 35
	'for'          shift, and enter state 36
	'if'           shift, and enter state 37
	'lambda'       shift, and enter state 38
	'not'          shift, and enter state 39
	'probability'  shift, and enter state 40
	'random'       shift, and enter state 41
	'return'       shift, and enter state 42
	'true'         shift, and enter state 43
	'while'        shift, and enter state 44
	'{'            shift, and enter state 45
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47
	L_doubl        shift, and enter state 48

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Double         goto state 6
	Program        goto state 7
	Stmt5          goto state 8
	Stmt4          goto state 9
	Stmt1          goto state 10
	Stmt           goto state 11
	Stmt2          goto state 12
	Stmt3          goto state 13
	Stmt6          goto state 14
	Expr9          goto state 15
	Expr8          goto state 16
	Expr7          goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	'::'           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'?'            reduce using rule 1
	']'            reduce using rule 1
	'and'          reduce using rule 1
	'distribution' reduce using rule 1
	'do'           reduce using rule 1
	'equals'       reduce using rule 1
	'from'         reduce using rule 1
	'mod'          reduce using rule 1
	'or'           reduce using rule 1
	'then'         reduce using rule 1
	'times'        reduce using rule 1
	'to'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt5 -> Ident . '=' Expr1 ';'                      (rule 19)
	Expr9 -> Ident .                                    (rule 53)
	Expr1 -> Ident . '(' ListExpr ')'                   (rule 80)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'('            shift, and enter state 102
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	'::'           reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            shift, and enter state 103
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'?'            reduce using rule 53
	'and'          reduce using rule 53
	'equals'       reduce using rule 53
	'mod'          reduce using rule 53
	'or'           reduce using rule 53
	'||'           reduce using rule 53


State 4

	Expr9 -> Integer .                                  (rule 54)

	'!='           reduce using rule 54
	'%'            reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            reduce using rule 54
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            reduce using rule 54
	':'            reduce using rule 54
	'::'           reduce using rule 54
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'?'            reduce using rule 54
	']'            reduce using rule 54
	'and'          reduce using rule 54
	'distribution' reduce using rule 54
	'do'           reduce using rule 54
	'equals'       reduce using rule 54
	'mod'          reduce using rule 54
	'or'           reduce using rule 54
	'then'         reduce using rule 54
	'times'        reduce using rule 54
	'to'           reduce using rule 54
	'||'           reduce using rule 54


State 5

	Expr9 -> String .                                   (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	':'            reduce using rule 57
	'::'           reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'?'            reduce using rule 57
	']'            reduce using rule 57
	'and'          reduce using rule 57
	'distribution' reduce using rule 57
	'do'           reduce using rule 57
	'equals'       reduce using rule 57
	'mod'          reduce using rule 57
	'or'           reduce using rule 57
	'then'         reduce using rule 57
	'times'        reduce using rule 57
	'to'           reduce using rule 57
	'||'           reduce using rule 57


State 6

	Expr9 -> Double .                                   (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            reduce using rule 58
	':'            reduce using rule 58
	'::'           reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'?'            reduce using rule 58
	']'            reduce using rule 58
	'and'          reduce using rule 58
	'distribution' reduce using rule 58
	'do'           reduce using rule 58
	'equals'       reduce using rule 58
	'mod'          reduce using rule 58
	'or'           reduce using rule 58
	'then'         reduce using rule 58
	'times'        reduce using rule 58
	'to'           reduce using rule 58
	'||'           reduce using rule 58


State 7

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 8

	Stmt4 -> Stmt5 .                                    (rule 22)

	'!'            reduce using rule 22
	'('            reduce using rule 22
	'()'           reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	';'            reduce using rule 22
	'['            reduce using rule 22
	']'            reduce using rule 22
	'array'        reduce using rule 22
	'break'        reduce using rule 22
	'continue'     reduce using rule 22
	'def'          reduce using rule 22
	'do'           reduce using rule 22
	'else'         reduce using rule 22
	'false'        reduce using rule 22
	'for'          reduce using rule 22
	'if'           reduce using rule 22
	'lambda'       reduce using rule 22
	'not'          reduce using rule 22
	'probability'  reduce using rule 22
	'random'       reduce using rule 22
	'return'       reduce using rule 22
	'satisfying'   reduce using rule 22
	'then'         reduce using rule 22
	'to'           reduce using rule 22
	'true'         reduce using rule 22
	'while'        reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	L_ident        reduce using rule 22
	L_integ        reduce using rule 22
	L_quoted       reduce using rule 22
	L_doubl        reduce using rule 22
	%eof           reduce using rule 22


State 9

	Stmt3 -> Stmt4 .                                    (rule 32)

	'!'            reduce using rule 32
	'('            reduce using rule 32
	'()'           reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	';'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	'array'        reduce using rule 32
	'break'        reduce using rule 32
	'continue'     reduce using rule 32
	'def'          reduce using rule 32
	'do'           reduce using rule 32
	'else'         reduce using rule 32
	'false'        reduce using rule 32
	'for'          reduce using rule 32
	'if'           reduce using rule 32
	'lambda'       reduce using rule 32
	'not'          reduce using rule 32
	'probability'  reduce using rule 32
	'random'       reduce using rule 32
	'return'       reduce using rule 32
	'satisfying'   reduce using rule 32
	'then'         reduce using rule 32
	'to'           reduce using rule 32
	'true'         reduce using rule 32
	'while'        reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	L_ident        reduce using rule 32
	L_integ        reduce using rule 32
	L_quoted       reduce using rule 32
	L_doubl        reduce using rule 32
	%eof           reduce using rule 32


State 10

	Stmt -> Stmt1 . Stmt                                (rule 29)
	Stmt -> Stmt1 .                                     (rule 30)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'()'           shift, and enter state 27
	'-'            shift, and enter state 28
	';'            shift, and enter state 29
	'['            shift, and enter state 30
	'array'        shift, and enter state 31
	'break'        shift, and enter state 32
	'continue'     shift, and enter state 33
	'def'          shift, and enter state 34
	'false'        shift, and enter state 35
	'for'          shift, and enter state 36
	'if'           shift, and enter state 37
	'lambda'       shift, and enter state 38
	'not'          shift, and enter state 39
	'probability'  shift, and enter state 40
	'random'       shift, and enter state 41
	'return'       shift, and enter state 42
	'true'         shift, and enter state 43
	'while'        shift, and enter state 44
	'{'            shift, and enter state 45
	'}'            reduce using rule 30
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47
	L_doubl        shift, and enter state 48
	%eof           reduce using rule 30

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Double         goto state 6
	Stmt5          goto state 8
	Stmt4          goto state 9
	Stmt1          goto state 10
	Stmt           goto state 101
	Stmt2          goto state 12
	Stmt3          goto state 13
	Stmt6          goto state 14
	Expr9          goto state 15
	Expr8          goto state 16
	Expr7          goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 11

	Program -> Stmt .                                   (rule 5)

	%eof           reduce using rule 5


State 12

	Stmt1 -> Stmt2 .                                    (rule 28)

	'!'            reduce using rule 28
	'('            reduce using rule 28
	'()'           reduce using rule 28
	')'            reduce using rule 28
	','            reduce using rule 28
	'-'            reduce using rule 28
	';'            reduce using rule 28
	'['            reduce using rule 28
	']'            reduce using rule 28
	'array'        reduce using rule 28
	'break'        reduce using rule 28
	'continue'     reduce using rule 28
	'def'          reduce using rule 28
	'do'           reduce using rule 28
	'else'         reduce using rule 28
	'false'        reduce using rule 28
	'for'          reduce using rule 28
	'if'           reduce using rule 28
	'lambda'       reduce using rule 28
	'not'          reduce using rule 28
	'probability'  reduce using rule 28
	'random'       reduce using rule 28
	'return'       reduce using rule 28
	'satisfying'   reduce using rule 28
	'then'         reduce using rule 28
	'to'           reduce using rule 28
	'true'         reduce using rule 28
	'while'        reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	L_ident        reduce using rule 28
	L_integ        reduce using rule 28
	L_quoted       reduce using rule 28
	L_doubl        reduce using rule 28
	%eof           reduce using rule 28


State 13

	Stmt2 -> Stmt3 .                                    (rule 31)

	'!'            reduce using rule 31
	'('            reduce using rule 31
	'()'           reduce using rule 31
	')'            reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	';'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	'array'        reduce using rule 31
	'break'        reduce using rule 31
	'continue'     reduce using rule 31
	'def'          reduce using rule 31
	'do'           reduce using rule 31
	'else'         reduce using rule 31
	'false'        reduce using rule 31
	'for'          reduce using rule 31
	'if'           reduce using rule 31
	'lambda'       reduce using rule 31
	'not'          reduce using rule 31
	'probability'  reduce using rule 31
	'random'       reduce using rule 31
	'return'       reduce using rule 31
	'satisfying'   reduce using rule 31
	'then'         reduce using rule 31
	'to'           reduce using rule 31
	'true'         reduce using rule 31
	'while'        reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	L_ident        reduce using rule 31
	L_integ        reduce using rule 31
	L_quoted       reduce using rule 31
	L_doubl        reduce using rule 31
	%eof           reduce using rule 31


State 14

	Stmt5 -> Stmt6 .                                    (rule 20)

	'!'            reduce using rule 20
	'('            reduce using rule 20
	'()'           reduce using rule 20
	')'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	';'            reduce using rule 20
	'['            reduce using rule 20
	']'            reduce using rule 20
	'array'        reduce using rule 20
	'break'        reduce using rule 20
	'continue'     reduce using rule 20
	'def'          reduce using rule 20
	'do'           reduce using rule 20
	'else'         reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'if'           reduce using rule 20
	'lambda'       reduce using rule 20
	'not'          reduce using rule 20
	'probability'  reduce using rule 20
	'random'       reduce using rule 20
	'return'       reduce using rule 20
	'satisfying'   reduce using rule 20
	'then'         reduce using rule 20
	'to'           reduce using rule 20
	'true'         reduce using rule 20
	'while'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_ident        reduce using rule 20
	L_integ        reduce using rule 20
	L_quoted       reduce using rule 20
	L_doubl        reduce using rule 20
	%eof           reduce using rule 20


State 15

	Expr8 -> Expr9 .                                    (rule 64)

	'!='           reduce using rule 64
	'%'            reduce using rule 64
	'&&'           reduce using rule 64
	')'            reduce using rule 64
	'*'            reduce using rule 64
	'+'            reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'/'            reduce using rule 64
	':'            reduce using rule 64
	'::'           reduce using rule 64
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'=='           reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	'?'            reduce using rule 64
	']'            reduce using rule 64
	'and'          reduce using rule 64
	'distribution' reduce using rule 64
	'do'           reduce using rule 64
	'equals'       reduce using rule 64
	'mod'          reduce using rule 64
	'or'           reduce using rule 64
	'then'         reduce using rule 64
	'times'        reduce using rule 64
	'to'           reduce using rule 64
	'||'           reduce using rule 64


State 16

	Expr7 -> Expr8 . '::' Expr7                         (rule 65)
	Expr7 -> Expr8 .                                    (rule 66)

	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&&'           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'/'            reduce using rule 66
	':'            reduce using rule 66
	'::'           shift, and enter state 100
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'?'            reduce using rule 66
	']'            reduce using rule 66
	'and'          reduce using rule 66
	'distribution' reduce using rule 66
	'do'           reduce using rule 66
	'equals'       reduce using rule 66
	'mod'          reduce using rule 66
	'or'           reduce using rule 66
	'then'         reduce using rule 66
	'times'        reduce using rule 66
	'to'           reduce using rule 66
	'||'           reduce using rule 66


State 17

	Expr6 -> Expr7 .                                    (rule 68)

	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	':'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'?'            reduce using rule 68
	']'            reduce using rule 68
	'and'          reduce using rule 68
	'distribution' reduce using rule 68
	'do'           reduce using rule 68
	'equals'       reduce using rule 68
	'mod'          reduce using rule 68
	'or'           reduce using rule 68
	'then'         reduce using rule 68
	'times'        reduce using rule 68
	'to'           reduce using rule 68
	'||'           reduce using rule 68


State 18

	Expr6 -> Expr6 . MulOp Expr7                        (rule 67)
	Expr5 -> Expr6 .                                    (rule 70)

	'!='           reduce using rule 70
	'%'            shift, and enter state 96
	'&&'           reduce using rule 70
	')'            reduce using rule 70
	'*'            shift, and enter state 97
	'+'            reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'/'            shift, and enter state 98
	':'            reduce using rule 70
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'?'            reduce using rule 70
	']'            reduce using rule 70
	'and'          reduce using rule 70
	'distribution' reduce using rule 70
	'do'           reduce using rule 70
	'equals'       reduce using rule 70
	'mod'          shift, and enter state 99
	'or'           reduce using rule 70
	'then'         reduce using rule 70
	'times'        reduce using rule 70
	'to'           reduce using rule 70
	'||'           reduce using rule 70

	MulOp          goto state 95

State 19

	Expr5 -> Expr5 . AddOp Expr6                        (rule 69)
	Expr4 -> Expr5 .                                    (rule 72)

	'!='           reduce using rule 72
	'&&'           reduce using rule 72
	')'            reduce using rule 72
	'+'            shift, and enter state 93
	','            reduce using rule 72
	'-'            shift, and enter state 94
	':'            reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'?'            reduce using rule 72
	']'            reduce using rule 72
	'and'          reduce using rule 72
	'distribution' reduce using rule 72
	'do'           reduce using rule 72
	'equals'       reduce using rule 72
	'or'           reduce using rule 72
	'then'         reduce using rule 72
	'times'        reduce using rule 72
	'to'           reduce using rule 72
	'||'           reduce using rule 72

	AddOp          goto state 92

State 20

	Expr4 -> Expr4 . RelOp Expr5                        (rule 71)
	Expr3 -> Expr4 . AndOp Expr3                        (rule 73)
	Expr3 -> Expr4 .                                    (rule 74)

	'!='           shift, and enter state 83
	'&&'           shift, and enter state 84
	')'            reduce using rule 74
	','            reduce using rule 74
	':'            reduce using rule 74
	';'            reduce using rule 74
	'<'            shift, and enter state 85
	'<='           shift, and enter state 86
	'=='           shift, and enter state 87
	'>'            shift, and enter state 88
	'>='           shift, and enter state 89
	'?'            reduce using rule 74
	']'            reduce using rule 74
	'and'          shift, and enter state 90
	'distribution' reduce using rule 74
	'do'           reduce using rule 74
	'equals'       shift, and enter state 91
	'or'           reduce using rule 74
	'then'         reduce using rule 74
	'times'        reduce using rule 74
	'to'           reduce using rule 74
	'||'           reduce using rule 74

	RelOp          goto state 81
	AndOp          goto state 82

State 21

	Expr2 -> Expr3 . OrOp Expr2                         (rule 75)
	Expr2 -> Expr3 .                                    (rule 76)

	')'            reduce using rule 76
	','            reduce using rule 76
	':'            reduce using rule 76
	';'            reduce using rule 76
	'?'            reduce using rule 76
	']'            reduce using rule 76
	'distribution' reduce using rule 76
	'do'           reduce using rule 76
	'or'           shift, and enter state 79
	'then'         reduce using rule 76
	'times'        reduce using rule 76
	'to'           reduce using rule 76
	'||'           shift, and enter state 80

	OrOp           goto state 78

State 22

	Expr1 -> Expr2 .                                    (rule 81)

	')'            reduce using rule 81
	','            reduce using rule 81
	':'            reduce using rule 81
	';'            reduce using rule 81
	'?'            reduce using rule 81
	']'            reduce using rule 81
	'distribution' reduce using rule 81
	'do'           reduce using rule 81
	'then'         reduce using rule 81
	'times'        reduce using rule 81
	'to'           reduce using rule 81


State 23

	Expr -> Expr1 . '?' Expr1 ':' Expr1                 (rule 82)
	Expr -> Expr1 .                                     (rule 88)

	')'            reduce using rule 88
	','            reduce using rule 88
	';'            reduce using rule 88
	'?'            shift, and enter state 77
	']'            reduce using rule 88
	'do'           reduce using rule 88
	'then'         reduce using rule 88
	'to'           reduce using rule 88


State 24

	Stmt5 -> Expr . ';'                                 (rule 16)

	';'            shift, and enter state 76


State 25

	Expr8 -> '!' . Expr9                                (rule 62)

	'('            shift, and enter state 59
	'()'           shift, and enter state 27
	'false'        shift, and enter state 35
	'true'         shift, and enter state 43
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47
	L_doubl        shift, and enter state 48

	Ident          goto state 57
	Integer        goto state 4
	String         goto state 5
	Double         goto state 6
	Expr9          goto state 75

State 26

	Expr9 -> '(' . Expr ')'                             (rule 60)
	Expr1 -> '(' . ListExpr ')'                         (rule 77)
